--- a/cydOS-main/manifest.json
+++ b/cydOS-main/manifest.json
@@ -1,13 +1,12 @@
 {
   "name": "cydOS",
   "version": "1.0.0",
-  "new_install_prompt_erase": true,
   "builds": [
     {
       "chipFamily": "ESP32",
       "parts": [
         {
-          "path": "https://github.com/DavidNguyenReal/eclipse/raw/main/cydOS-main/firmware.bin",
+          "path": "https://raw.githubusercontent.com/DavidNguyenReal/eclipse/main/cydOS-main/firmware.bin",
           "offset": 0x10000
         }
       ]
