--- a/cydOS-main/manifest.json
+++ b/cydOS-main/manifest.json
@@ -7,7 +7,7 @@
       "parts": [
         {
           "path": "https://raw.githubusercontent.com/DavidNguyenReal/eclipse/main/cydOS-main/firmware.bin",
-          "offset": 0x10000
+          "offset": 268435456
         }
       ]
     }
