--- a/cydOS-main/manifest.json
+++ b/cydOS-main/manifest.json
@@ -1,13 +1,13 @@
 {
   "name": "cydOS",
-  "version": "1.0.0",
+  "version": "1.0",
   "builds": [
     {
       "chipFamily": "ESP32",
       "parts": [
         {
-          "path": "https://raw.githubusercontent.com/DavidNguyenReal/eclipse/main/cydOS-main/firmware.bin",
-          "offset": 268435456
+          "path": "./firmware.bin",
+          "offset": 65536
         }
       ]
     }
