--- a/cydOS-main/manifest.json
+++ b/cydOS-main/manifest.json
@@ -3,10 +3,10 @@
   "version": "1.0",
   "builds": [
     {
-      "chipFamily": "ESP32",
+      "chipFamily": "ESP32", 
       "parts": [
         {
-          "path": "./firmware.bin",
+          "path": "https://raw.githubusercontent.com/DavidNguyenReal/eclipse/main/cydOS-main/firmware.bin",
           "offset": 65536
         }
       ]
