--- a/cydOS-main/manifest.json
+++ b/cydOS-main/manifest.json
@@ -6,7 +6,15 @@
       "chipFamily": "ESP32", 
       "parts": [
         {
-          "path": "https://raw.githubusercontent.com/DavidNguyenReal/eclipse/main/cydOS-main/firmware.bin",
+          "path": "https://raw.githubusercontent.com/DavidNguyenReal/eclipse/main/cydOS-main/.pio/build/esp32dev/bootloader.bin",
+          "offset": 4096
+        },
+        {
+          "path": "https://raw.githubusercontent.com/DavidNguyenReal/eclipse/main/cydOS-main/.pio/build/esp32dev/partitions.bin",
+          "offset": 32768
+        },
+        {
+          "path": "https://raw.githubusercontent.com/DavidNguyenReal/eclipse/main/cydOS-main/.pio/build/esp32dev/firmware.bin",
           "offset": 65536
         }
       ]
